# photos-calory-tracker

./: README.md  google_photos.py  google_photos_init.py  main.py  open_ai.py  pyproject.toml  validate.py
.github/workflows/: run.yaml
validation/: banana_raw.json  cottage_cheese.json  date_raw.json  dumplings.json  pear_raw.json  pudding_packaged.json  pudding_unpackaged.json  salad.json  yoghurt.json
